--- a/src/main/resources/templates/goodbye.mustache
+++ b/src/main/resources/templates/goodbye.mustache
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-<h1>{{username}}님, 반갑습니다!</h1>
+<!--3-3. 변수를 사용하려면, 요청을 받아 페이지를 뿌려주는 메소드에서 model을 파라미터로 받아, 모델에 변수를 박아준다.-->
+<h1>{{nickname}}님, 다음에 또 만나요</h1>
 </body>
 </html>
