--- a/src/main/resources/templates/goodbye.mustache
+++ b/src/main/resources/templates/goodbye.mustache
@@ -1,13 +1,5 @@
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-<!--3-3. 변수를 사용하려면, 요청을 받아 페이지를 뿌려주는 메소드에서 model을 파라미터로 받아, 모델에 변수를 박아준다.-->
-<h1>{{nickname}}님, 다음에 또 만나요</h1>
-</body>
-</html>
+{{>layouts/header}}
+<div class="bg-dark text-white p-5">
+    <h1>{{nickname}}님, 다음에 또 만나요</h1>
+</div>
+{{>layouts/footer}}
