11. 화면에서 요청link(a/form)과 post에서 redirect걸기

--- a/src/main/resources/templates/articles/new.mustache
+++ b/src/main/resources/templates/articles/new.mustache
@@ -11,6 +11,8 @@
         <textarea rows="3" class="form-control" name="content"></textarea>
     </div>
     <button class="btn btn-primary" type="submit">Submit</button>
+    <!--11-2. new -> index -->
+    <a href="/articles">Back</a>
 </form>
 
 {{>layouts/footer}}
