13. 수정1) edit form화면 만들기(show -> 개별조회데이터를 채운 post Update 준비 form화면, GET)

--- a/src/main/resources/templates/articles/show.mustache
+++ b/src/main/resources/templates/articles/show.mustache
@@ -17,6 +17,7 @@
     {{/article}}
     </tbody>
 </table>
-
+<!--12-1. show -> edit로 이어지는 요청link -->
+<a href="/articles/{{article.id}}/edit" class="btn btn-primary">Edit</a>
 <a href="/articles">Go to Article List</a>
 {{>layouts/footer}}
