--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -50,3 +50,11 @@
         </div>
     </div>
 </nav>
+
+<!--14-6 redirect로 뭔가 db처리하고 넘어온 msg가 있다면, 출력해줘-->
+{{#msg}}
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        {{msg}}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+{{/msg}}
