25. `댓글 삭제` view(moda)와 js코드 작성

--- a/src/main/resources/templates/articles/index.mustache
+++ b/src/main/resources/templates/articles/index.mustache
@@ -8,7 +8,7 @@
     </tr>
     </thead>
     <tbody>
-    <!--  article 객체 -> 객체list인 articlesList 알아서 반복된다.  -->
+    <!--  article 객체 -> 객체list인 articlesList 알아서 반복된다.(단일객체는 생략되고 필드만 뽑아쓴다)  -->
     {{#articleList}}
         <tr>
             <td>{{id}}</td>
