--- a/src/main/resources/templates/comments/_new.mustache
+++ b/src/main/resources/templates/comments/_new.mustache
@@ -1,9 +1,8 @@
 <!--23-1. 영역을 잡되, boostrap card로 잡은 뒤, 그 내부에 form을 만든다.-->
 <div id="comments-new" class="card m-2">
     <div class="card-body">
-        <!-- boostrap card-shape form (no action/method for js)  -->
+        <!-- 댓글 생성 form -->
         <form>
-
             <!--input nickname-->
             <div class="mb-3">
                 <label for="new-comment-nickname" class="form-label">nickname</label>
